# Retro-Graphics-Engine

./: .gitignore  CMakeLists.txt  README.md  test.cpp  test.md
assets/shaders/: fragment.shader  vertex.shader  vertex_fragment.shader
include/: color.h  draw.h  engine.h  input.h  keyboard_mouse_inputs.h  renderer.h  textures.h  window.h
sample_projects/falling_sand/: CMakeLists.txt
sample_projects/game_of_life/: CMakeLists.txt  GOL_helpers.cpp  GOL_helpers.h  gameoflife.cpp
sample_projects/snake/: CMakeLists.txt  snake.cpp  snake_helpers.cpp  snake_helpers.h
src/: draw.cpp  engine.cpp  input.cpp  renderer.cpp  textures.cpp  window.cpp
src/internal/: draw.h  input.h  textures.h  window.h
